deploy: c67752ba0a5b144ba3d374ffd3d6316c8095c2c0

--- a/stories/pathways/index.html
+++ b/stories/pathways/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-29 06:57 -->
+    <!-- Built with 11ty - 2024-09-09 12:33 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>BCC | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1724914657">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1725885209">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1724914657"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1725885209"></script>
 
     <style>
 
@@ -42,10 +42,11 @@
 <body class="type-stories slug-pathways">
 <header>
 
-<a id="sitetitle" href="/">Movement and Common World in Early America <span class="subtitle">Homelands, Pathways and the Peoples of the Northeast</span></a>
+<a id="sitetitle" href="/">Movement and Common World in Early America<br/> <span class="subtitle">Homelands, Pathways and the Peoples of the Northeast</span></a>
 <nav>
   <div id="mainmenu">
     <input id="menu" type="checkbox"/>
+      <!--<img src="/assets/img/icons/font-awesome/bars-solid.svg"/>-->
     <label class="menu" role="button" for="menu">Menu</label>
     <ol>
       
@@ -130,7 +131,7 @@
 <div class="article_spacer">&nbsp;</div>
 <footer class="footer">
     <hr/>
-    <div class="w3-row has-text-centered w3-padding-small flex-container">
+    <div class="w3-row has-text-centered w3-padding-small flex-container w3-hide-small">
         <div class="logo">
             <h4>Partners and Funders</h4>
         </div>
@@ -159,8 +160,36 @@
         </div>
 
     </div>
+    <div class="w3-row has-text-centered flex-container w3-padding-small w3-hide-medium w3-hide-large">
+        <div class="logo">
+            <h4>Partners and Funders</h4>
+        </div>
+        <div class="logo kcl-logo">
+            <a href="//kdl.kcl.ac.uk/">
+                <picture><source type="image/webp" srcset="/assets/img/nk1khL1P44-197.webp 197w" sizes="300, 600"><img alt="King's College London logo" loading="lazy" decoding="async" src="/assets/img/nk1khL1P44-197.jpeg" width="197" height="150"></picture>
+            </a>
+        </div>
 
+        <div class="logo">
+            <a href="//treatiedspaces.com/">
+                <picture><source type="image/webp" srcset="/assets/img/CwY17WAq9I-300.webp 300w, /assets/img/CwY17WAq9I-571.webp 571w" sizes="300, 600"><source type="image/jpeg" srcset="/assets/img/CwY17WAq9I-300.jpeg 300w, /assets/img/CwY17WAq9I-571.jpeg 571w" sizes="300, 600"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/CwY17WAq9I-300.jpeg" width="571" height="183"></picture>
+            </a>
+        </div>
+        <!--w3-col s12 m3 l2 -->
+        <div class="logo">
+            <a href="//www.ukri.org/about-us/ahrc/">
+                <picture><source type="image/webp" srcset="/assets/img/FFTP2Ugojm-300.webp 300w, /assets/img/FFTP2Ugojm-600.webp 600w, /assets/img/FFTP2Ugojm-1887.webp 1887w" sizes="(min-width: 10em), 30vw"><source type="image/jpeg" srcset="/assets/img/FFTP2Ugojm-300.jpeg 300w, /assets/img/FFTP2Ugojm-600.jpeg 600w, /assets/img/FFTP2Ugojm-1887.jpeg 1887w" sizes="(min-width: 10em), 30vw"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/FFTP2Ugojm-300.jpeg" width="1887" height="480"></picture>
+            </a>
+        </div>
 
+    </div>
+<div class="w3-row w3-padding-small w3-hide-medium w3-hide-large">
+    <div class="footer-credits">
+            ©2024 Brightening the Covenant Chain <a href="/accessibility">Accessibility Statement</a>
+            <a href="/acknowledgements">Credits &amp; Acknowledgements</a>
+        </div>
+
+</div>
     <div class="w3-row footer-bottom">
         <div class="w3-row has-text-centered w3-padding-small">
             <div class="w3-col s1 m2 l3">&nbsp</div>
