--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-08-29 06:57 -->
+    <!-- Built with 11ty - 2024-09-09 12:33 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Treatied Spaces | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1724914657">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1725885209">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1724914657"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1725885209"></script>
 
     <style>
 
@@ -42,10 +42,11 @@
 <body class="type-page slug-">
 <header>
 
-<a id="sitetitle" href="/">Movement and Common World in Early America <span class="subtitle">Homelands, Pathways and the Peoples of the Northeast</span></a>
+<a id="sitetitle" href="/">Movement and Common World in Early America<br/> <span class="subtitle">Homelands, Pathways and the Peoples of the Northeast</span></a>
 <nav>
   <div id="mainmenu">
     <input id="menu" type="checkbox"/>
+      <!--<img src="/assets/img/icons/font-awesome/bars-solid.svg"/>-->
     <label class="menu" role="button" for="menu">Menu</label>
     <ol>
       
@@ -102,24 +103,33 @@
 <section class="section">
     <div class="home-container">
         <div class="w3-row has-text-centered w3-padding-small home-hero">
-            <div class="w3-col s3 m4 l4">&nbsp;</div>
-            <div class="w3-col s6 m4 l4 info-box">
+            <div class="w3-col s1 m4 l4">&nbsp;</div>
+            <div class="w3-col s10 m4 l4 info-box">
                 Movement and Common Worlds is an interactive map platform which uses data garnered from historical maps
                 to illustrate evolving European conceptions of the political and spatial worlds of the American
                 Northeast. As part of Brightening the Covenant Chain, our kinetic map helps tell a more nuanced and
                 complex story than popular history has hitherto told about colonial settlement among - and the Crown's
                 relations with - the powerful indigenous nations of the Iroquois Confederacy.
                 <br/>
-                <div class="info-button"><a href="stories/">GO TO MAP</a></div>
+                <h2 class="w3-hide-medium w3-hide-large">The interactive map cannot be viewed on mobile-sized screens</h2>
+                <h4 class="w3-hide-medium w3-hide-large">Pleas view this site on a tablet or larger, or click below to learn more about the project</h4>
+                <div class="info-button w3-hide-small"><a href="stories/">GO TO MAP</a></div>
+                <div class="info-button w3-hide-medium w3-hide-large"><a href="about/">Learn More</a></div>
             </div>
 
             <div class="content ">
                 
             </div>
         </div>
-        <div class="w3-row has-text-centered w3-padding-small flex-container quicklink-container">
+        <div class="w3-row has-text-centered w3-padding-small">
+            <div class="w3-col s10 m10 w3-hide-medium w3-hide-large">
+                <h2>
+                </h2>
+            </div>
+        </div>
+        <div class="w3-row has-text-centered w3-padding-small flex-container quicklink-container w3-hide-small">
 
-            <div class="w3-col s6 m4 l3 quicklink quicklink-spacer">
+            <div class="w3-col s10 m4 l3 quicklink quicklink-spacer">
                 <div class="quicklink-text">
                     Scroll through illustrated narratives which explain and expand on the historical contexts of the
                     map
@@ -129,7 +139,7 @@
 
             </div>
 
-            <div class="w3-col s6 m4 l3 quicklink quicklink-spacer">
+            <div class="w3-col s10 m4 l3 quicklink quicklink-spacer">
                 <div class="quicklink-text">
                     Select historical map sources and choose what features to display.
                 </div>
@@ -149,7 +159,7 @@
 
 <footer class="footer">
     <hr/>
-    <div class="w3-row has-text-centered w3-padding-small flex-container">
+    <div class="w3-row has-text-centered w3-padding-small flex-container w3-hide-small">
         <div class="logo">
             <h4>Partners and Funders</h4>
         </div>
@@ -178,8 +188,36 @@
         </div>
 
     </div>
+    <div class="w3-row has-text-centered flex-container w3-padding-small w3-hide-medium w3-hide-large">
+        <div class="logo">
+            <h4>Partners and Funders</h4>
+        </div>
+        <div class="logo kcl-logo">
+            <a href="//kdl.kcl.ac.uk/">
+                <picture><source type="image/webp" srcset="/assets/img/nk1khL1P44-197.webp 197w" sizes="300, 600"><img alt="King's College London logo" loading="lazy" decoding="async" src="/assets/img/nk1khL1P44-197.jpeg" width="197" height="150"></picture>
+            </a>
+        </div>
 
+        <div class="logo">
+            <a href="//treatiedspaces.com/">
+                <picture><source type="image/webp" srcset="/assets/img/CwY17WAq9I-300.webp 300w, /assets/img/CwY17WAq9I-571.webp 571w" sizes="300, 600"><source type="image/jpeg" srcset="/assets/img/CwY17WAq9I-300.jpeg 300w, /assets/img/CwY17WAq9I-571.jpeg 571w" sizes="300, 600"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/CwY17WAq9I-300.jpeg" width="571" height="183"></picture>
+            </a>
+        </div>
+        <!--w3-col s12 m3 l2 -->
+        <div class="logo">
+            <a href="//www.ukri.org/about-us/ahrc/">
+                <picture><source type="image/webp" srcset="/assets/img/FFTP2Ugojm-300.webp 300w, /assets/img/FFTP2Ugojm-600.webp 600w, /assets/img/FFTP2Ugojm-1887.webp 1887w" sizes="(min-width: 10em), 30vw"><source type="image/jpeg" srcset="/assets/img/FFTP2Ugojm-300.jpeg 300w, /assets/img/FFTP2Ugojm-600.jpeg 600w, /assets/img/FFTP2Ugojm-1887.jpeg 1887w" sizes="(min-width: 10em), 30vw"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/FFTP2Ugojm-300.jpeg" width="1887" height="480"></picture>
+            </a>
+        </div>
 
+    </div>
+<div class="w3-row w3-padding-small w3-hide-medium w3-hide-large">
+    <div class="footer-credits">
+            ©2024 Brightening the Covenant Chain <a href="/accessibility">Accessibility Statement</a>
+            <a href="/acknowledgements">Credits &amp; Acknowledgements</a>
+        </div>
+
+</div>
     <div class="w3-row footer-bottom">
         <div class="w3-row has-text-centered w3-padding-small">
             <div class="w3-col s1 m2 l3">&nbsp</div>
