--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-09-09 12:33 -->
+    <!-- Built with 11ty - 2024-09-09 12:43 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Treatied Spaces | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1725885209">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1725885782">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1725885209"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1725885782"></script>
 
     <style>
 
@@ -148,8 +148,7 @@
 
             <div class="w3-col s6 m4 l3 quicklink">
                 <div class="quicklink-text">
-                    Find out more about the themes and topics of M&CW with links to related websites and suggestions for
-                    further reading.
+                    Find out more about the themes and topics of M&CW with links to related websites and further reading.
                 </div>
                 <div class="info-button"><a href="resources/">Resources</a></div>
             </div>
