deploy: b34d768f1ef0202704bcf17b40d57765a4bde35c

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-09-10 19:22 -->
+    <!-- Built with 11ty - 2024-09-10 19:44 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1725996173">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1725997477">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1725996173"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1725997477"></script>
 
     <style>
 
@@ -558,6 +558,13 @@
                            class="explore_filter" id="checkbox11"/>
                     <label for="checkbox11">
                         <img src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Description</span>
+                    </label>
+                </li>
+                <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
+                           data-filtervalue='{"sub_type":5, "identity":[0]}'
+                           class="explore_filter" id="checkbox12"/>
+                    <label for="checkbox12">
+                        <img src="/assets/img/stories/pathways.webp" alt=""/><span>Description</span>
                     </label>
                 </li>
             </ol>
