deploy: 35931d98bfeb4c9bc44512d70086312e021d1eca

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-09-10 19:44 -->
+    <!-- Built with 11ty - 2024-09-10 20:01 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1725997477">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1725998466">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1725997477"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1725998466"></script>
 
     <style>
 
@@ -476,7 +476,7 @@
         </section>
 
         <section id="featureFilters" class="filterDisabled">
-            <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/6 Selected</em></h3>
+            <header><h3>Features <em><span id="totalExploreFiltersApplied">0</span>/12 Selected</em></h3>
                 <span><input type="checkbox" id="selectallFeatures" name="selectall" value="All">
                 <label for="selectallFeatures">Select All</label></span>
             </header>
@@ -564,7 +564,7 @@
                            data-filtervalue='{"sub_type":5, "identity":[0]}'
                            class="explore_filter" id="checkbox12"/>
                     <label for="checkbox12">
-                        <img src="/assets/img/stories/pathways.webp" alt=""/><span>Description</span>
+                        <img src="/assets/img/stories/pathways.webp" alt=""/><span>Pathways</span>
                     </label>
                 </li>
             </ol>
