--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-09-30 15:16 -->
+    <!-- Built with 11ty - 2024-09-30 15:56 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>About the project | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1727709410">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1727711795">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1727709410"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1727711795"></script>
 
     <style>
 
@@ -68,10 +68,6 @@
                     <a href="/accessibility/">Accessibility</a>
                 </li>
             
-                <li class="">
-                    <a href="/acknowledgements/">Acknowledgements</a>
-                </li>
-            
 
         </ol>
 
@@ -97,7 +93,7 @@
 <p>To do that we need to look at maps produced by British surveyors in a different way. On one view, they show the development of colonies marked by names and framed by borders. But as they sought to visualise a colonial world, map makers also depicted a Native world of villages, towns, nations, and confederacies, sitting alongside colonial towns. If you look closely, you will see that each map-based depiction of a ‘colonial world’ is also a depiction of an Indigenous one. In this project, we sought to bring these worlds back together after two centuries of separation and misunderstanding.</p>
 <h2>How the kinetic map was made</h2>
 <p>We wanted to be able to show not only the layers of information that were presented in maps of North America over time, but also how  historic maps consistently revealed the juxtaposition of Native and colonial presence. Since no database existed for this, our first task was to build one. To do this we selected a range of historic maps that, to us, provided the best respresentations of common worlds; these were geo-rectified over a base map and then data points from each map were selected and recorded. These data points included settlements and placenames, both Indigenous and European, as well as rivers and land pathways. A consistent feature of these early maps is that Indigenous homelands are represented by printed words and phrases but their physical extent, unlike that of colonies, are not demarcated by boundary lines. This is starkly illustrated in the image below (an excerpt from John Mitchell's iconic map of 1755). Numerous words and phrases indicate areas associated with particular peoples and Native Nations, and the map's largest label - which arcs across the centre of the map, is 'The Six Nations, or Iroquois'. In the absence of printed boundaries we captured the mapmakers' understandings of the relative locations of Native nations and peoples by recording the position and extent of the associated text segments on the map. It is important to realise, then, that when our map displays a polygon with the associated text &quot;Senekas&quot; this polygon is not delimiting a geographical area but rather the position and alignment of a printed word on the map.</p>
-<p><img src="../assets/img/about/Image_for_about_page.jpg" alt="Detail from Mitchell 1755 map"></p>
+<p><img src="../assets/img/about/Image_for_about_page.jpg" alt="Detail from Mitchell 1755 map" class="map_page_image"></p>
 <h2>Using the kinetic map</h2>
 <p>There are two ways to interact with the <em>Movement and Common Worlds</em> map application. The first is through the Stories. Start at the 'Overview' and simply scroll downwards slowly. The map display changes to complement the accompanying text and images. The second mode allows you to explore freely, using a set of filters to see information captured from specific maps.</p>
 <h2>The Project Team</h2>
