--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-11 12:21 -->
+    <!-- Built with 11ty - 2024-10-11 14:25 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Treatied Spaces | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1728649285">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1728656733">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1728649285"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1728656733"></script>
 
     <style>
 
@@ -84,11 +84,11 @@
     <div class="home-container">
         <div class="home-hero">
             <div class="info-box">
-                Using data garnered from historical maps, an interactive map platform illustrates evolving European conceptions of the political and spatial worlds of the American
+                An interactive map platform, using data garnered from historical maps, illustrates evolving European conceptions of the political and spatial worlds of the American
                 Northeast. 
                 <br/>
-                <a href="about/"><div class="info-button">About</div></a>
-                <a href="stories/"><div class="info-button">Stories</div></a>
+                <a href="about/"><button>About</button></a>
+                <a href="stories/"><button>Stories</button></a>
                 
             </div>
 
@@ -97,30 +97,30 @@
             </div>
     
         </div>
-        <div class="">
+        <div class="home-section">
 
-            <div class="">
-                <div class="quicklink-text">
+            <div class="card">
+                <p>
                     Scroll through illustrated narratives which explain and expand on the historical contexts of the
                     map
                     data.
-                </div>
-                <div class="info-button"><a href="stories/">Stories</a></div>
+                </p>
+                <a href="stories/"><button>Stories</button></a>
 
             </div>
 
-            <div class="">
-                <div class="quicklink-text">
+            <div class="card">
+                <p>
                     Select historical map sources and choose what features to display.
-                </div>
-                <div class="info-button"><a href="stories/#s6-end">Explore</a></div>
+                </p>
+                <a href="stories/#s6-end"><button>Explore</button></a>
             </div>
 
-            <div class="">
-                <div class="quicklink-text">
-                    Find out more about the themes and topics of M&CW with links to related websites and further reading.
-                </div>
-                <div class="info-button"><a href="resources/">Resources</a></div>
+            <div class="card">
+                <p>
+                    Find out more about the themes and topics linking to related websites and further reading.
+                </p>
+                <a href="resources/"><button>Resources</button></a>
             </div>
 
         </div>
