deploy: 884a6bc5ba04e994db517a6d1e382c5cc83646a1

--- a/stories/villagers_settlers/index.html
+++ b/stories/villagers_settlers/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-11 17:44 -->
+    <!-- Built with 11ty - 2024-10-11 22:22 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>BCC | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1728668654">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1728685349">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1728668654"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1728685349"></script>
 
     <style>
 
@@ -40,9 +40,7 @@
 <header>
 <nav>
     <div id="mainmenu">
-        <div>
-        <a id="sitetitle" href="/">Movement and Common World in Early America<br/> <span class="subtitle">Homelands, Pathways and the Peoples of the Northeast</span></a>
-        </div>
+        <a id="sitetitle" href="/"><span>Movement and Common World in Early America</span><div class="subtitle">Homelands, Pathways and the Peoples of the Northeast</div></a>
         <input id="menu" type="checkbox"/>
         <!--<img src="/assets/img/icons/font-awesome/bars-solid.svg"/>-->
         <label class="menu" role="button" for="menu">Menu</label>
@@ -116,76 +114,31 @@
 <div class="article_spacer">&nbsp;</div><article class="mapSlide" id="slide_29" data-slideId="29"><p>Bradley’s map shows state-driven colonialism that created the conditions for the free movement of settlers, and to constrain the movement of Native peoples. As John Adams noted in remarks on the basis of American power: ‘If you make enquiry into the circumstances of the different parts of America, at this day; you find the people in all the States pushing their settlements out into the wilderness, upon the frontiers, cutting down the woods, and subduing new lands, with as much eagerness and rapidity, as they used to do in former times of war or peace’.</p>
 </article>
 <div class="article_spacer">&nbsp;</div>
-<footer class="footer">
-    <hr/>
-    <div class="w3-row has-text-centered w3-padding-small flex-container w3-hide-small">
+<footer>
+    <div class="logos">
+        <h4>Partners <span>&</span> Funders</h4>
         <div class="logo">
-            <h4>Partners and Funders</h4>
-        </div>
-        <div class="logo kcl-logo">
             <a href="//kdl.kcl.ac.uk/">
                 <picture><source type="image/webp" srcset="/assets/img/nk1khL1P44-197.webp 197w" sizes="300, 600"><img alt="King's College London logo" loading="lazy" decoding="async" src="/assets/img/nk1khL1P44-197.jpeg" width="197" height="150"></picture>
             </a>
         </div>
-
         <div class="logo">
             <a href="//treatiedspaces.com/">
                 <picture><source type="image/webp" srcset="/assets/img/CwY17WAq9I-300.webp 300w, /assets/img/CwY17WAq9I-571.webp 571w" sizes="300, 600"><source type="image/jpeg" srcset="/assets/img/CwY17WAq9I-300.jpeg 300w, /assets/img/CwY17WAq9I-571.jpeg 571w" sizes="300, 600"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/CwY17WAq9I-300.jpeg" width="571" height="183"></picture>
             </a>
         </div>
-        <!--w3-col s12 m3 l2 -->
         <div class="logo">
             <a href="//www.ukri.org/about-us/ahrc/">
-                <picture><source type="image/webp" srcset="/assets/img/FFTP2Ugojm-300.webp 300w, /assets/img/FFTP2Ugojm-600.webp 600w, /assets/img/FFTP2Ugojm-1887.webp 1887w" sizes="(min-width: 10em), 30vw"><source type="image/jpeg" srcset="/assets/img/FFTP2Ugojm-300.jpeg 300w, /assets/img/FFTP2Ugojm-600.jpeg 600w, /assets/img/FFTP2Ugojm-1887.jpeg 1887w" sizes="(min-width: 10em), 30vw"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/FFTP2Ugojm-300.jpeg" width="1887" height="480"></picture>
+                <picture><source type="image/webp" srcset="/assets/img/FFTP2Ugojm-300.webp 300w, /assets/img/FFTP2Ugojm-600.webp 600w, /assets/img/FFTP2Ugojm-1887.webp 1887w" sizes="300, 600"><source type="image/jpeg" srcset="/assets/img/FFTP2Ugojm-300.jpeg 300w, /assets/img/FFTP2Ugojm-600.jpeg 600w, /assets/img/FFTP2Ugojm-1887.jpeg 1887w" sizes="300, 600"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/FFTP2Ugojm-300.jpeg" width="1887" height="480"></picture>
             </a>
         </div>
-
-        <div class="footer-credits">
-            ©2024 Brightening the Covenant Chain<br/>
-            <a href="/accessibility">Accessibility Statement</a><br/>
-            <a href="/acknowledgements">Credits &amp; Acknowledgements</a>
-        </div>
-
     </div>
-    <div class="w3-row has-text-centered flex-container w3-padding-small w3-hide-medium w3-hide-large">
-        <div class="logo">
-            <h4>Partners and Funders</h4>
-        </div>
-        <div class="logo kcl-logo">
-            <a href="//kdl.kcl.ac.uk/">
-                <picture><source type="image/webp" srcset="/assets/img/nk1khL1P44-197.webp 197w" sizes="300, 600"><img alt="King's College London logo" loading="lazy" decoding="async" src="/assets/img/nk1khL1P44-197.jpeg" width="197" height="150"></picture>
-            </a>
-        </div>
-
-        <div class="logo">
-            <a href="//treatiedspaces.com/">
-                <picture><source type="image/webp" srcset="/assets/img/CwY17WAq9I-300.webp 300w, /assets/img/CwY17WAq9I-571.webp 571w" sizes="300, 600"><source type="image/jpeg" srcset="/assets/img/CwY17WAq9I-300.jpeg 300w, /assets/img/CwY17WAq9I-571.jpeg 571w" sizes="300, 600"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/CwY17WAq9I-300.jpeg" width="571" height="183"></picture>
-            </a>
-        </div>
-        <!--w3-col s12 m3 l2 -->
-        <div class="logo">
-            <a href="//www.ukri.org/about-us/ahrc/">
-                <picture><source type="image/webp" srcset="/assets/img/FFTP2Ugojm-300.webp 300w, /assets/img/FFTP2Ugojm-600.webp 600w, /assets/img/FFTP2Ugojm-1887.webp 1887w" sizes="(min-width: 10em), 30vw"><source type="image/jpeg" srcset="/assets/img/FFTP2Ugojm-300.jpeg 300w, /assets/img/FFTP2Ugojm-600.jpeg 600w, /assets/img/FFTP2Ugojm-1887.jpeg 1887w" sizes="(min-width: 10em), 30vw"><img alt="Treatied spaces" loading="lazy" decoding="async" src="/assets/img/FFTP2Ugojm-300.jpeg" width="1887" height="480"></picture>
-            </a>
-        </div>
-
-    </div>
-<div class="w3-row w3-padding-small w3-hide-medium w3-hide-large">
-    <div class="footer-credits">
-            ©2024 Brightening the Covenant Chain <a href="/accessibility">Accessibility Statement</a>
-            <a href="/acknowledgements">Credits &amp; Acknowledgements</a>
-        </div>
-
-</div>
-    <div class="w3-row footer-bottom">
-        <div class="w3-row has-text-centered w3-padding-small">
-            <div class="w3-col s1 m2 l3">&nbsp</div>
-            <div class="w3-col s10 m8 l6 develop">
-                Designed, developed and maintained by <a href="//kdl.kcl.ac.uk/">King's Digital Lab</a>
-            </div>
-        </div>
-
-
+    <div class="info">
+        <ul>
+            <li><a href="/accessibility">Accessibility Statement</a></li>
+            <li><a href="/acknowledgements">Credits &amp; Acknowledgements</a></li>
+            <li>©2024 Brightening the Covenant Chain</li>
+        </ul>
     </div>
 </footer>
 
