deploy: ae1833c56174e5a8de3896659b08774d8fd7c33f

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-11 22:22 -->
+    <!-- Built with 11ty - 2024-10-14 14:23 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1728685350">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1728915794">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1728685350"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1728915794"></script>
 
     <style>
 
@@ -320,7 +320,7 @@
 <div class="article_spacer">&nbsp;</div>
     </section>
 
-    <section id="filters" class="sectionContainer">
+    <section id="s6-end" class="sectionContainer">
         <div class="storyTitleSpacerAbove" id="s6-start"></div>
         <article class="storyTitle mapSlide" id="slide_1000" data-slideId="1000">
             <h2>Explore</h2>
@@ -350,7 +350,7 @@
                 <span><input type="checkbox" id="selectallMaps" name="selectall" value="All">
                 <label for="selectallMaps">Select All</label></span>
             </header>
-            <ol>
+            <ol class="maps">
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
                            class="map_selector" id="mapcheckbox1"/>
                     <label for="mapcheckbox1">
@@ -418,7 +418,7 @@
                 <label for="selectallFeatures">Select All</label></span>
             </header>
 
-            <ol>
+            <ol class="icons">
 
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":4, "identity":[2]}'
