deploy: f6902f93014fea600f8725f94f8e15ee2659fd98

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-14 14:23 -->
+    <!-- Built with 11ty - 2024-10-14 14:45 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1728915794">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1728917131">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1728915794"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1728917131"></script>
 
     <style>
 
@@ -532,37 +532,37 @@
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img></td>
-    <td>Settlement (Indigenous)</td>
+    <td>Settlement <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img></td>
-    <td>Settlement (European)</td>
+    <td>Settlement <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img></td>
-    <td>Placename (Indigenous)</td>
+    <td>Placename <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img></td>
-    <td>Placename (European)</td>
+    <td>Placename <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img></td>
-    <td>Annotation (Indigenous-related)</td>
+    <td>Annotation <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img></td>
-    <td>Annotation (Haudenosaunee-related)</td>
+    <td>Annotation <span>(Haudenosaunee-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img></td>
-    <td>Annotation (European-related)</td>
+    <td>Annotation <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
