deploy: 0005a01fda61e373ec2ea082a3459b82e047ed32

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-14 16:55 -->
+    <!-- Built with 11ty - 2024-10-15 10:28 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1728924934">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1728988134">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1728924934"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1728988134"></script>
 
     <style>
 
@@ -116,7 +116,7 @@
             <li><a class="overviewLink" href="#s-4" data-slideId="800">4<span>Villagers, Settlers</span></a></li>
             <li><a class="overviewLink" href="#s-5" data-slideId="900">5<span>Lines</span></a></li>
             <!--  -->
-            <li><a class="overviewLink" href="#s6-end" data-slideId="1000">Explore </a></li>
+            <li><a class="overviewLink" href="#s-6" data-slideId="1000">Explore </a></li>
         </ol>
     </nav>
 
@@ -320,7 +320,7 @@
 <div class="article_spacer">&nbsp;</div>
     </section>
 
-    <section id="s6-end" class="sectionContainer">
+    <section id="s-6" class="sectionContainer">
         <div class="storyTitleSpacerAbove" id="s6-start"></div>
         <article class="storyTitle mapSlide" id="slide_1000" data-slideId="1000">
             <h2>Explore</h2>
@@ -329,13 +329,15 @@
             </p>
         </article>
 
-        <div id="s6-end" class="article_spacer">&nbsp;</div>
+        <div id="s-6-end" >&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
+    </section>
+    <section id="s-7" class="sectionContainer">
     </section>
 </div>
 
 <div id="filter-wrapper">
-    <a href="#s6-end"></a>
+    <a href="#s-7"></a>
     <input type="checkbox" id="filter">
     <label aria-label="filter list" id="filter-button" class="filter-button" for="filter">
         <h2>Filter</h2>
