--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-14 16:55 -->
+    <!-- Built with 11ty - 2024-10-15 10:28 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Treatied Spaces | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1728924934">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1728988134">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1728924934"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1728988134"></script>
 
     <style>
 
@@ -111,7 +111,7 @@
                 <p>
                     Select historical map sources and choose what features to display.
                 </p>
-                <a href="stories/#s6-end"><button>Explore</button></a>
+                <a href="stories/#s-6"><button>Explore</button></a>
             </div>
 
             <div class="card">
