deploy: 5810ea571ab7db577d57e5720569e87a618efe5a

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-15 17:00 -->
+    <!-- Built with 11ty - 2024-10-15 18:50 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729011649">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729018206">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729011649"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729018206"></script>
 
     <style>
 
@@ -468,7 +468,7 @@
                            data-filtervalue='{"sub_type":11, "identity":[2]}'
                            class="explore_filter" id="checkbox7"/>
                     <label for="checkbox7">
-                        <img src="/assets/img/stories/region_turquoise.webp" alt=""/><span>Other indigenous related annotations</span>
+                        <img style="opacity:0.3" src="/assets/img/stories/region_turquoise.webp" alt=""/><span>Other indigenous related annotations</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -482,14 +482,14 @@
                            data-filtervalue='{"sub_type":14, "identity":[0]}'
                            class="explore_filter" id="checkbox9"/>
                     <label for="checkbox9">
-                        <img src="/assets/img/stories/region_purple.webp" alt=""/><span>Colonial domains</span>
+                        <img style="opacity:0.3" src="/assets/img/stories/region_purple.webp" alt=""/><span>Colonial domains</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":7, "identity":[0]}'
                            class="explore_filter" id="checkbox10"/>
                     <label for="checkbox10">
-                        <img src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Descriptions</span>
+                        <img style="opacity:0.5" src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Descriptions</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -570,6 +570,11 @@
     <td>&nbsp;&nbsp;</td>
     <td><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img></td>
     <td>Colonial domain</td>
+  </tr>
+  <tr>
+    <td>&nbsp;&nbsp;</td>
+    <td><img style="height: 1em;opacity:0.5" src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp"></img></td>
+    <td>Descriptions</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
@@ -672,6 +677,7 @@
 
 </body>
 </html>
+
 
 
 
