deploy: 68f1fb112ade3ae9b2ac96a151bcd8f86f9d245e

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-15 20:08 -->
+    <!-- Built with 11ty - 2024-10-16 10:18 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729022897">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729073883">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729022897"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729073883"></script>
 
     <style>
 
@@ -161,8 +161,7 @@
         </article>
         <div class="article_spacer">&nbsp;</div>
         <div class="storyTitleSpacerBelow"></div>
-        <article class="mapSlide" id="slide_5" data-slideId="5"><h2>1. Homelands</h2>
-<p>American history begins with the deep history of the land and its peoples as they existed long before the arrival of Europeans. British explorers were often professional soldiers who made coastal landings and moved up the dozens of rivers that led inland. They claimed possession of these spaces according to legal arguments that gave ownership of empty land to whoever occupied and ‘improved’ it. But they soon learned that the land was not empty. The Indigenous name of the place they called ‘Virginia’ is Tsenacommacah: the densely inhabited land.</p>
+        <article class="mapSlide" id="slide_5" data-slideId="5"><p>American history begins with the deep history of the land and its peoples as they existed long before the arrival of Europeans. British explorers were often professional soldiers who made coastal landings and moved up the dozens of rivers that led inland. They claimed possession of these spaces according to legal arguments that gave ownership of empty land to whoever occupied and ‘improved’ it. But they soon learned that the land was not empty. The Indigenous name of the place they called ‘Virginia’ is Tsenacommacah: the densely inhabited land.</p>
 <p><img src="../assets/img/stories/5-White-1590a.jpg" alt="Virginia"></p>
 </article>
 <div class="article_spacer">&nbsp;</div><article class="mapSlide" id="slide_6" data-slideId="6"><p>The Indigenous landscape was more than a homeland: it was a site of creation. For the coastal Algonquian it was the Dawnland, for the Haudenosaunee it was Turtle Island – the place where everything had its beginning and its being. The land was a cultural and moral space, infused with fundamental beliefs, and overlayered with stories that were enacted, remembered, and shared among kin and with Europeans.</p>
