--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-16 11:55 -->
+    <!-- Built with 11ty - 2024-10-16 12:05 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729079740">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729080302">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729079740"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729080302"></script>
 
     <style>
 
@@ -339,7 +339,7 @@
     <a href="#s-7"></a>
     <input type="checkbox" id="filter">
     <label aria-label="filter list" id="filter-button" class="filter-button" for="filter">
-        <h2>Filter</h2>
+        <h2>Filters</h2>
     </label>
 
     <div class="content">
