--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-16 13:42 -->
+    <!-- Built with 11ty - 2024-10-16 14:10 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729086146">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729087819">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729086146"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729087819"></script>
 
     <style>
 
@@ -467,7 +467,7 @@
                            data-filtervalue='{"sub_type":11, "identity":[2]}'
                            class="explore_filter" id="checkbox7"/>
                     <label for="checkbox7">
-                        <img style="opacity:0.3" src="/assets/img/stories/region_turquoise.webp" alt=""/><span>Other indigenous related annotations</span>
+                        <img src="/assets/img/stories/region_turquoise.webp" alt=""/><span>Other indigenous related annotations</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -481,14 +481,14 @@
                            data-filtervalue='{"sub_type":14, "identity":[0]}'
                            class="explore_filter" id="checkbox9"/>
                     <label for="checkbox9">
-                        <img style="opacity:0.3" src="/assets/img/stories/region_purple.webp" alt=""/><span>Colonial domains</span>
+                        <img src="/assets/img/stories/region_purple.webp" alt=""/><span>Colonial domains</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
                            data-filtervalue='{"sub_type":7, "identity":[0]}'
                            class="explore_filter" id="checkbox10"/>
                     <label for="checkbox10">
-                        <img style="opacity:0.3" src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Descriptions</span>
+                        <img src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp" alt=""/><span>Descriptions</span>
                     </label>
                 </li>
                 <li><input type="checkbox" data-featuretype="all" data-criteria="map_filter"
@@ -552,7 +552,7 @@
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;opacity:0.3;" src="/assets/img/stories/region_turquoise.webp"></img></td>
+    <td><img style="height: 1em;" src="/assets/img/stories/region_turquoise.webp"></img></td>
     <td>Annotation <span>(Indigenous)</span></td>
   </tr>
   <tr>
@@ -567,12 +567,12 @@
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;opacity:0.3" src="/assets/img/stories/region_purple.webp"></img></td>
+    <td><img style="height: 1em;" src="/assets/img/stories/region_purple.webp"></img></td>
     <td>Colonial domain</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;opacity:0.3" src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp"></img></td>
+    <td><img style="height: 1em;" src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp"></img></td>
     <td>Descriptions</td>
   </tr>
   <tr>
