deploy: 3edcd7cb21cc0ec95813e339a31679304fc989f9

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-16 19:13 -->
+    <!-- Built with 11ty - 2024-10-16 20:22 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729105993">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729110176">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729105993"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729110176"></script>
 
     <style>
 
@@ -532,67 +532,67 @@
 <table>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/circle_turquoise.webp"></img></td>
+    <td><img src="/assets/img/stories/circle_turquoise.webp"></img></td>
     <td>Settlement <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/circle_purple.webp"></img></td>
+    <td><img src="/assets/img/stories/circle_purple.webp"></img></td>
     <td>Settlement <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/cross_turquoise.webp"></img></td>
+    <td><img src="/assets/img/stories/cross_turquoise.webp"></img></td>
     <td>Placename <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/cross_purple.webp"></img></td>
+    <td><img src="/assets/img/stories/cross_purple.webp"></img></td>
     <td>Placename <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/region_turquoise.webp"></img></td>
+    <td><img src="/assets/img/stories/region_turquoise.webp"></img></td>
     <td>Annotation <span>(Indigenous)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img></td>
+    <td><img src="/assets/img/stories/haudenosaunee-hatch-30-pc-fill-turquoise.webp"></img></td>
     <td>Annotation <span>(Haudenosaunee-related)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/diagonal_hatching_purple.webp"></img></td>
+    <td><img src="/assets/img/stories/diagonal_hatching_purple.webp"></img></td>
     <td>Annotation <span>(European)</span></td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/region_purple.webp"></img></td>
+    <td><img src="/assets/img/stories/region_purple.webp"></img></td>
     <td>Colonial domain</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp"></img></td>
+    <td><img src="/assets/img/stories/vertical_hatch_grey_8C8C8C.webp"></img></td>
     <td>Descriptions</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/principal_rivers.webp"></img></td>
+    <td><img src="/assets/img/stories/principal_rivers.webp"></img></td>
     <td>River</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/pathways.webp"></img></td>
+    <td><img src="/assets/img/stories/pathways.webp"></img></td>
     <td>Pathway</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/boundary.webp"></img></td>
+    <td><img src="/assets/img/stories/boundary.webp"></img></td>
     <td>Boundary</td>
   </tr>
   <tr>
     <td>&nbsp;&nbsp;</td>
-    <td><img style="height: 1em;" src="/assets/img/stories/council-fire.webp"></img></td>
+    <td><img src="/assets/img/stories/council-fire.webp"></img></td>
     <td>Council fire</td>
   </tr>
 </table>
