deploy: a171040bf0e24370f1e1d538ee06c0761df9a24a

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-16 20:52 -->
+    <!-- Built with 11ty - 2024-10-17 10:55 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,10 @@
 
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729111949">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729162536">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729111949"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729162536"></script>
 
     <style>
 
@@ -78,14 +78,6 @@
 </nav>
 </header>
 
-<style>
-    .homeText {
-        font-family: 'Comic Sans MS', 'Papyrus', sans-serif;
-        font-size: 32px;
-        font-weight: bold;
-        fill: red;
-    }
-</style>
 
 <!DOCTYPE html>
 <html>
@@ -120,6 +112,14 @@
         </ol>
     </nav>
 
+    <section id="guide">
+        <article style="border:4px solid #4b5d04">
+            <h2 style="text-align:center">How to use</h2>
+            <p>To explore the content, simply scroll down through the page. You can also use the navigation menu to jump directly to specific sections. At the start of each section, you'll find engaging animations that highlight key message. The legend that pulls out on the right that clarifies the meaning of each symbol on the map. Filter through the data in the Explore section.</p>  
+            <p>Please note that due to the volume of data, loading times may vary, so patience is appreciated.</p>
+            </article>
+    </section>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <section id="overview">
         <article class="storyTitle">
@@ -323,8 +323,7 @@
         <div class="storyTitleSpacerAbove" id="s6-start"></div>
         <article class="storyTitle mapSlide" id="slide_1000" data-slideId="1000">
             <h2>Explore</h2>
-            <p>Customize your search using the filters below.
-                Choose the map images or feature icons to enable the filters you require.
+            <p>The filters below allow you to refine the dataset according to your specific interests, ensuring that you can focus on the most relevant information. By selecting specific maps or features, you can activate filters that focus on relevant data. By customising these elements, these filters allow for a streamlined and personalised exploration experience.
             </p>
         </article>
 
