--- a/stories/villagers_settlers/index.html
+++ b/stories/villagers_settlers/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-17 11:00 -->
+    <!-- Built with 11ty - 2024-10-17 11:21 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -13,10 +13,11 @@
 
     <title>BCC | BCC - Treatied Spaces</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729162805">
+    <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729164066">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729162805"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729164066"></script>
 
     <style>
 
