deploy: 6ea377f25dddaadc7397ed649a5bbfb8c9d906d0

--- a/stories/index.html
+++ b/stories/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-18 06:43 -->
+    <!-- Built with 11ty - 2024-10-24 12:09 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,10 +14,10 @@
     <title>Stories Introduction | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729233812">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729771764">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729233812"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729771764"></script>
 
     <style>
 
@@ -116,7 +116,7 @@
     <section id="guide">
         <article style="border:4px solid #4b5d04">
             <h2 style="text-align:center">How to use</h2>
-            <p>To explore the content, simply scroll down through the page. You can also use the navigation menu to jump directly to specific sections. At the start of each section, you'll find engaging animations that highlight key message. The legend that pulls out on the right that clarifies the meaning of each symbol on the map. Filter through the data in the Explore section.</p>  
+            <p>To explore the content, simply scroll down through the page - data display changes will precede the relevant text. You can also use the navigation menu to jump directly to specific sections. At the start of each section, you'll find engaging animations that highlight key message. The legend that pulls out on the right that clarifies the meaning of each symbol on the map. Filter through the data in the Explore section.</p>  
             <p>Please note that due to the volume of data, loading times may vary, so patience is appreciated.</p>
             </article>
     </section>
