--- a/stories/homelands/index.html
+++ b/stories/homelands/index.html
@@ -1,7 +1,7 @@
 <html lang="en-GB">
 <head>
     <meta charset="utf-8">
-    <!-- Built with 11ty - 2024-10-24 12:09 -->
+    <!-- Built with 11ty - 2024-10-24 19:24 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="King's Digital Lab, King's College London">
     <meta name="description" content="">
@@ -14,10 +14,10 @@
     <title>BCC | BCC - Treatied Spaces</title>
 
     <link rel="icon" href="/assets/images/logos/favicon.png" sizes="any">
-    <link rel="stylesheet" href="/assets/css/style.css?ts=1729771764">
+    <link rel="stylesheet" href="/assets/css/style.css?ts=1729797854">
     <link rel="stylesheet" href="/assets/node_modules/leaflet/dist/leaflet.css"/>
     <link rel="stylesheet" href="/assets/node_modules/leaflet-dvf/dist/css/dvf.css"/>
-    <script src="/assets/js/navbar-toggle.js?ts=1729771764"></script>
+    <script src="/assets/js/navbar-toggle.js?ts=1729797854"></script>
 
     <style>
 
@@ -131,8 +131,8 @@
     </div>
     <div class="info">
         <ul>
-            <li><a href="/accessibility">Accessibility Statement</a></li>
-            <li><a href="/about">Credits &amp; Acknowledgements</a></li>
+            <li><a href="/accessibility/">Accessibility Statement</a></li>
+            <li><a href="/about/">Credits &amp; Acknowledgements</a></li>
             <li>©2024 Brightening the Covenant Chain</li>
         </ul>
     </div>
